--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+/* Import centralized color system */
+@import './styles/colors.css';
 
 html {
     box-sizing: border-box;
@@ -10,6 +12,8 @@ body {
     margin: 0;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    background: var(--color-bg-primary);
+    color: var(--color-text-primary);
 }
 
 img, video {
