--- a/frontend/src/Profile/Profile.css
+++ b/frontend/src/Profile/Profile.css
@@ -38,6 +38,7 @@
   flex: 1;
   width: 100%;
   min-height: 100vh;
+  margin-left: 260px;
   padding: 2rem;
   overflow-y: auto;
   color: #fff;
@@ -556,6 +557,7 @@
 
 @media (max-width: 880px) {
   .profile-container {
+    margin-left: 0;
     padding: 1.5rem 1rem;
     padding-top: 70px;
   }
