--- a/frontend/src/product/Add product/addproduct.css
+++ b/frontend/src/product/Add product/addproduct.css
@@ -9,6 +9,7 @@
 
 .main-content {
   flex: 1;
+  margin-left: 260px;
   padding: 2rem;
   position: relative;
   z-index: 1;
@@ -524,6 +525,7 @@
   }
   
   .main-content {
+      margin-left: 0;
       padding: 24px 20px;
   }
   
