--- a/frontend/src/product/product_cart/cart.css
+++ b/frontend/src/product/product_cart/cart.css
@@ -13,6 +13,7 @@
   flex: 1;
   width: 100%;
   min-height: 100vh;
+  margin-left: 260px;
   padding: 2rem;
   overflow-y: auto;
   color: #fff;
@@ -636,6 +637,7 @@
 
 @media (max-width: 880px) {
   .cart-container {
+    margin-left: 0;
     padding: 1.5rem 1rem;
     padding-top: 70px;
   }
